WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
149039
CodeBlock::codeType() doesn't need to compute anything
https://bugs.webkit.org/show_bug.cgi?id=149039
Summary
CodeBlock::codeType() doesn't need to compute anything
Geoffrey Garen
Reported
2015-09-10 12:33:30 PDT
CodeBlock::codeType() doesn't need to compute anything
Attachments
Patch
(1.62 KB, patch)
2015-09-10 12:34 PDT
,
Geoffrey Garen
msaboff
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2015-09-10 12:34:20 PDT
Created
attachment 260941
[details]
Patch
Michael Saboff
Comment 2
2015-09-10 12:35:21 PDT
Comment on
attachment 260941
[details]
Patch r=me
Geoffrey Garen
Comment 3
2015-09-10 12:36:49 PDT
Committed
r189585
: <
http://trac.webkit.org/changeset/189585
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug