CodeBlock::codeType() doesn't need to compute anything https://bugs.webkit.org/show_bug.cgi?id=149039

Reviewed by Michael Saboff.

CodeBlock already has an m_codeType data member.

* bytecode/CodeBlock.h:
(JSC::CodeBlock::codeType):
(JSC::CodeBlock::putByIdContext):


Canonical link: https://commits.webkit.org/167137@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@189585 268f45cc-cd09-0410-ab3c-d52691b4dbfc